--- a/section-2.tex
+++ b/section-2.tex
@@ -1613,7 +1613,7 @@ Consider the empty cover. Since any selection of patch candidates for the empty 
 \end{Example}
 
 
-When selected patch candidates $s_{i}$, \ldots, $s_{k}$ across a cover of $U$ are compatible, we say those patches glue together if if there's a section $s$ in $F(U)$ that restricts down to exactly those patches.
+When selected patch candidates $s_{i}$, \ldots, $s_{k}$ across a cover of $U$ are compatible, we say those patches glue together if there's a section $s$ in $F(U)$ that restricts down to exactly those patches.
 
 % ----------------------------------------
  \begin{Definition}[Gluing]
